Update clock topology example

--- a/examples/topology/clock.yml
+++ b/examples/topology/clock.yml
@@ -41,18 +41,51 @@ services:
     privileged: true
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  clock:
+  clock_http:
     command:
     - app
     - --path
     - /root/wotemu/examples/app/clock.py
     - --enable-http
+    depends_on:
+    - docker_api_proxy
+    - redis
+    - gw_wifi
+    deploy:
+      replicas: 2
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PATCH_PRIVILEGED: '1'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+    hostname: '{{.Task.Name}}'
+    image: wotemu
+    labels:
+      org.fundacionctic.wotemu.node: ''
+    networks:
+    - wifi
+    privileged: true
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  clock_mqtt:
+    command:
+    - app
+    - --path
+    - /root/wotemu/examples/app/clock.py
     - --enable-mqtt
     depends_on:
     - gw_mobile_3g
     - docker_api_proxy
-    - gw_wifi
     - redis
+    - gw_wifi
     deploy:
       replicas: 2
     environment:
@@ -79,24 +112,69 @@ services:
     privileged: true
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-  clock_sub:
+  clock_sub_http:
     command:
     - app
     - --path
     - /root/wotemu/examples/app/subscriber.py
     - --func-param
     - servient_host
-    - clock.wifi
+    - clock_http.wifi
     - --func-param
     - thing_id
     - urn:org:fundacionctic:thing:clock
     depends_on:
     - gw_mobile_3g
     - docker_api_proxy
-    - gw_wifi
     - redis
+    - gw_wifi
     deploy:
       replicas: 4
+      resources:
+        limits:
+          memory: 200M
+    environment:
+      DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
+      NODE_HOSTNAME: '{{.Node.Hostname}}'
+      NODE_ID: '{{.Node.ID}}'
+      PATCH_PRIVILEGED: '1'
+      PORT_CATALOGUE: '9090'
+      PORT_COAP: '5683'
+      PORT_HTTP: '80'
+      PORT_MQTT: '1883'
+      PORT_WS: '81'
+      REDIS_URL: redis://redis
+      SERVICE_ID: '{{.Service.ID}}'
+      SERVICE_NAME: '{{.Service.Name}}'
+      TARGET_CPU_SPEED: 200
+    hostname: '{{.Task.Name}}'
+    image: wotemu
+    labels:
+      org.fundacionctic.wotemu.node: ''
+    networks:
+    - wifi
+    - mobile_3g
+    privileged: true
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+  clock_sub_mqtt:
+    command:
+    - app
+    - --path
+    - /root/wotemu/examples/app/subscriber.py
+    - --func-param
+    - servient_host
+    - clock_mqtt.wifi
+    - --func-param
+    - thing_id
+    - urn:org:fundacionctic:thing:clock
+    depends_on:
+    - gw_mobile_3g
+    - docker_api_proxy
+    - redis
+    - gw_wifi
+    deploy:
+      replicas: 2
       resources:
         limits:
           memory: 200M
