--- a/examples/quickstart.yml
+++ b/examples/quickstart.yml
@@ -7,6 +7,8 @@ networks:
     name: 3g
 services:
   docker_api_proxy:
+    cap_add:
+    - ALL
     deploy:
       placement:
         constraints:
@@ -15,16 +17,16 @@ services:
       CONTAINERS: '1'
       NETWORKS: '1'
       NODES: '1'
-      PATCH_PRIVILEGED: '1'
       SERVICES: '1'
       TASKS: '1'
     image: tecnativa/docker-socket-proxy
     networks:
     - 3g
-    privileged: true
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   gw_3g:
+    cap_add:
+    - ALL
     command:
     - gateway
     - delay --time 300 --jitter 150 --distribution normal
@@ -36,7 +38,6 @@ services:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
-      PATCH_PRIVILEGED: '1'
       PORT_CATALOGUE: '9090'
       PORT_COAP: '5683'
       PORT_HTTP: '80'
@@ -51,10 +52,11 @@ services:
       org.fundacionctic.wotemu.gw: ''
     networks:
     - 3g
-    privileged: true
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   reader:
+    cap_add:
+    - ALL
     command:
     - app
     - --path
@@ -67,8 +69,8 @@ services:
     - urn:wotemu:quickstart:thing
     depends_on:
     - gw_3g
-    - docker_api_proxy
     - redis
+    - docker_api_proxy
     deploy:
       replicas: 4
       resources:
@@ -78,7 +80,6 @@ services:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
-      PATCH_PRIVILEGED: '1'
       PORT_CATALOGUE: '9090'
       PORT_COAP: '5683'
       PORT_HTTP: '80'
@@ -93,7 +94,6 @@ services:
       org.fundacionctic.wotemu.node: ''
     networks:
     - 3g
-    privileged: true
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   redis:
@@ -105,6 +105,8 @@ services:
     ports:
     - '6379'
   server:
+    cap_add:
+    - ALL
     command:
     - app
     - --path
@@ -112,15 +114,14 @@ services:
     - --enable-http
     depends_on:
     - gw_3g
-    - docker_api_proxy
     - redis
+    - docker_api_proxy
     deploy:
       replicas: 1
     environment:
       DOCKER_PROXY_URL: tcp://docker_api_proxy:2375/
       NODE_HOSTNAME: '{{.Node.Hostname}}'
       NODE_ID: '{{.Node.ID}}'
-      PATCH_PRIVILEGED: '1'
       PORT_CATALOGUE: '9090'
       PORT_COAP: '5683'
       PORT_HTTP: '80'
@@ -135,7 +136,6 @@ services:
       org.fundacionctic.wotemu.node: ''
     networks:
     - 3g
-    privileged: true
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
 version: '3.7'
